# nrf54l15_zb_accel

./: CMakeLists.txt  build-dk-gcc.sh  build-dk-llvm.sh  build-ezurio-gcc.sh  build-ezurio-llvm-log.sh  build-ezurio-llvm.sh  build-l.sh  build-llvm.sh  builddk.sh  dts.overlay  dts_pcbv1.overlay  e.sh  flash-dk-llvm.exp  flash-ezurio-gcc.exp  flash-ezurio-llvm.exp  flash.exp  gcc.sh  nrf_dk_gdb.sh  ocd_dap_54.sh  prj.conf  uart.sh
config/: log.conf  zb.conf
src/: led.cpp  main.cpp  zb_mem_config_custom.h
src/zb/: zb_accel_cluster_desc.hpp  zb_accel_settings.hpp
z2m/: zb_accel.js
